--- a/docs/apm/api.asciidoc
+++ b/docs/apm/api.asciidoc
@@ -717,7 +717,7 @@ curl -X DELETE "http://localhost:5601/api/apm/sourcemaps/apm:foo-1.0.0-644fd5a9"
 
 [role="xpack"]
 [[agent-key-api]]
-=== Agent Key API
+=== APM agent Key API
 
 The Agent Key API allows you to configure agent keys to authorize requests from agents to the APM Server.
 
