--- a/docs/user/commands/kibana-verification-code.asciidoc
+++ b/docs/user/commands/kibana-verification-code.asciidoc
@@ -1,7 +1,7 @@
 [[kibana-verification-code]]
 === kibana-verification-code
 
-The `kibana-verification-code` tool generates a verification code for enrolling
+The `kibana-verification-code` tool retrieves a verification code for enrolling
 a {kib} instance with a secured {es} cluster. 
 
 [discrete]
@@ -16,14 +16,14 @@ bin/kibana-verification-code
 [discrete]
 ==== Description
 
-Use this command to generate a verification code for {kib}. You enter this code
+Use this command to retrieve a verification code for {kib}. You enter this code
 in {kib} when manually configuring a secure connection with an {es} cluster.
 This tool is useful if you don’t have access to the {kib} terminal output, such
 as on a hosted environment. You can connect to a machine where {kib} is
-running (such as using SSH) and generate a verification code that you enter in
+running (such as using SSH) and retrieve a verification code that you enter in
 {kib}.
 
-You must run this tool on the same machine where {kib} is running.
+IMPORTANT: You must run this tool on the same machine where {kib} is running.
 
 [discrete]
 [[kibana-verification-code-parameters]]
@@ -36,7 +36,7 @@ You must run this tool on the same machine where {kib} is running.
 [discrete]
 ==== Examples
 
-The following command generates a verification code for {kib}.
+The following command retrieves a verification code for {kib}.
 
 [source,shell]
 ----
