--- a/docs/apm/api.asciidoc
+++ b/docs/apm/api.asciidoc
@@ -742,7 +742,27 @@ include::api.asciidoc[tag=using-the-APIs]
 [[apm-create-agent-key]]
 ==== Create agent key
 
-Create an APM agent key. Specify privileges in the request body at creation time. If privileges are not specified at creation time, the created key will have all privileges.
+Create an APM agent key. Specify privileges in the request body at creation time.
+
+[[apm-create-agent-key-privileges]]
+===== Privileges
+
+Users must have at least the `manage_own_api_key` cluster privilege and the required application privileges.
+
+====== Example role:
+
+[source,js]
+--------------------------------------------------
+POST /_security/role/apm_agent_key_user
+{
+  "cluster": ["manage_own_api_key"], 
+  "applications": [{
+    "application": "apm",
+    "privileges": ["event:write", "sourcemap:write", "config_agent:read"],
+    "resources": ["*"]
+  }]
+}
+--------------------------------------------------
 
 [[apm-create-agent-key-req]]
 ===== Request
@@ -756,14 +776,12 @@ Create an APM agent key. Specify privileges in the request body at creation time
 `name`::
 (required, string) Name of the agent key.
 
-`event`::
-(optional, boolean) Adds the `event:write` privilege. Required for ingesting agent events.
+`privileges`::
+(required, array) APM agent key privileges. It can take one or more of the following values:
 
-`agentConfig`::
-(optional, boolean) Adds the `config_agent:read` privilege. Required for agents to read agent configuration remotely.
-
-`sourcemap`::
-(optional, boolean) Adds the `sourcemap:write` privilege. Required for uploading sourcemaps.
+  - `event:write`. Required for ingesting agent events.
+  - `config_agent:read`. Required for agents to read agent configuration remotely.
+  - `sourcemap:write`. Required for uploading sourcemaps.
 
 [[apm-agent-key-create-example]]
 ===== Example
@@ -773,9 +791,7 @@ Create an APM agent key. Specify privileges in the request body at creation time
 POST /api/apm/agent_keys
 {
     "name": "apm-key",
-    "event": true,
-    "agentConfig": false,
-    "sourcemap": false
+    "privileges": ["event:write", "config_agent:read", "sourcemap:write"]
 }
 --------------------------------------------------
 
