--- a/docs/user/commands/encryption-keys/index.asciidoc
+++ b/docs/user/commands/encryption-keys/index.asciidoc
@@ -1,8 +1,8 @@
 [[kibana-encryption-keys]]
-=== Set up encryption keys to protect sensitive information
+=== kibana-encryption-keys
 
 The `kibana-encryption-keys` command helps you set up encryption keys that {kib} uses
-to protect sensitive information.
+to protect sensitived information.
 
 [discrete]
 === Synopsis
