--- a/docs/CHANGELOG.asciidoc
+++ b/docs/CHANGELOG.asciidoc
@@ -14,6 +14,7 @@
 
 Review important information about the {kib} 6.x.x releases.
 
+* <<release-notes-6.8.21>>
 * <<release-notes-6.8.20>>
 * <<release-notes-6.8.19>>
 * <<release-notes-6.8.18>>
@@ -108,6 +109,23 @@ Review important information about the {kib} 6.x.x releases.
 //[float]
 //=== Known issues
 ////
+
+[[release-notes-6.8.21]]
+== {kib} 6.8.21
+
+For information about the {kib} 6.8.21 release, review the following information.
+
+[float]
+[[breaking-changes-6.8.21]]
+=== Breaking changes
+
+Breaking changes can prevent your application from optimal operation and performance. Before you upgrade, review the <<breaking-changes,Breaking changes>>, then mitigate the impact to your application.
+
+[float]
+[[bug-fixes-and-enhancements-6.8.21]]
+=== Bug fixes and enhancements
+
+There are no user-facing changes in the 6.8.21 release.
 
 [[release-notes-6.8.20]]
 == {kib} 6.8.20
