--- a/docs/user/dashboard/tsvb.asciidoc
+++ b/docs/user/dashboard/tsvb.asciidoc
@@ -16,7 +16,7 @@ With *TSVB*, you can:
 image::images/tsvb-screenshot.png[TSVB overview]
 
 [float]
-[[tsvb-index-pattern-mode]]
+[[tsvb-data-view-mode]]
 ==== Open and set up TSVB
 
 Open *TSVB*, then configure the required settings. You can create *TSVB* visualizations with only {data-sources}, or {es} index strings. 
@@ -37,11 +37,11 @@ IMPORTANT: Creating *TSVB* visualizations with an {es} index string is deprecate
 
 . In *TSVB*, click *Panel options*, then specify the *Data* settings.
 
-. Open the *Index pattern selection mode* options next to the *Index pattern* dropdown.
+. Open the *Data view mode* options next to the *Data view* dropdown.
 
 . Select *Use only {kib} {data-sources}*.
 
-. From the *Index pattern* drodpown, select the {data-source}, then select the *Time field* and *Interval*.
+. From the *Data view* drodpown, select the {data-source}, then select the *Time field* and *Interval*.
 
 . Select a *Drop last bucket* option. 
 +
@@ -258,9 +258,9 @@ Calculating the duration between the start and end of an event is unsupported in
 [%collapsible]
 ====
 
-To group with multiple fields, create runtime fields in the index pattern you are visualizing.
+To group with multiple fields, create runtime fields in the {data-source} you are visualizing.
 
-. Create a runtime field. Refer to <<managing-index-patterns, *Manage index patterns data fields*>> for more information.
+. Create a runtime field. Refer to <<managing-data-views, Manage data views>> for more information.
 +
 [role="screenshot"]
 image::images/tsvb_group_by_multiple_fields.png[Group by multiple fields]
