--- a/docs/management/connectors/index.asciidoc
+++ b/docs/management/connectors/index.asciidoc
@@ -3,6 +3,7 @@ include::action-types/resilient.asciidoc[]
 include::action-types/index.asciidoc[]
 include::action-types/jira.asciidoc[]
 include::action-types/teams.asciidoc[]
+include::action-types/xmatters.asciidoc[]
 include::action-types/pagerduty.asciidoc[]
 include::action-types/server-log.asciidoc[]
 include::action-types/servicenow.asciidoc[]
