--- a/docs/maps/import-geospatial-data.asciidoc
+++ b/docs/maps/import-geospatial-data.asciidoc
@@ -102,7 +102,8 @@ To draw features:
 
 . Click on the line, polygon, circle, bounding box, or point icon.
 . Move the mouse cursor over the map and follow the on screen instructions to draw a feature.
-.. When a feature is complete, the feature is added to the index as a new document.
++
+When a feature is complete, the feature is added to the index as a new document.
 . Repeat to draw additional features.
 . When you are finished adding features, go to the legend, and click *Exit* under the layer name.
 
