--- a/x-pack/plugins/translations/translations/ja-JP.json
+++ b/x-pack/plugins/translations/translations/ja-JP.json
@@ -749,7 +749,7 @@
     "xpack.lens.xyChart.axisExtent.disabledDataBoundsMessage": "折れ線グラフのみをデータ境界に合わせることができます",
     "xpack.lens.xyChart.axisExtent.full": "完全",
     "xpack.lens.xyChart.axisExtent.label": "境界",
-    "xpack.lens.xyChart.axisNameLabel": "軸名",
+    "xpack.lens.shared.axisNameLabel": "軸名",
     "xpack.lens.xyChart.axisOrientation.angled": "傾斜",
     "xpack.lens.xyChart.axisOrientation.horizontal": "横",
     "xpack.lens.xyChart.axisOrientation.label": "向き",
@@ -805,7 +805,7 @@
     "xpack.lens.xyChart.missingValuesLabel": "欠測値",
     "xpack.lens.xyChart.missingValuesLabelHelpText": "デフォルトでは、Lensではデータのギャップが表示されません。ギャップを埋めるには、選択します。",
     "xpack.lens.xyChart.nestUnderRoot": "データセット全体",
-    "xpack.lens.xyChart.overwriteAxisTitle": "軸タイトルを上書き",
+    "xpack.lens.shared.overwriteAxisTitle": "軸タイトルを上書き",
     "xpack.lens.xyChart.position.help": "凡例の配置を指定します。",
     "xpack.lens.xyChart.referenceLine.alertIconLabel": "アラート",
     "xpack.lens.xyChart.referenceLine.asteriskIconLabel": "アスタリスク",
@@ -837,7 +837,7 @@
     "xpack.lens.xyChart.seriesColor.auto": "自動",
     "xpack.lens.xyChart.seriesColor.label": "系列色",
     "xpack.lens.xyChart.shouldTruncate.help": "凡例項目が切り捨てられるかどうかを指定します",
-    "xpack.lens.xyChart.ShowAxisTitleLabel": "表示",
+    "xpack.lens.shared.ShowAxisTitleLabel": "表示",
     "xpack.lens.xyChart.showEnzones": "部分データマーカーを表示",
     "xpack.lens.xyChart.showSingleSeries.help": "エントリが1件の凡例を表示するかどうかを指定します",
     "xpack.lens.xyChart.splitSeries": "内訳の基準",
