--- a/x-pack/plugins/translations/translations/zh-CN.json
+++ b/x-pack/plugins/translations/translations/zh-CN.json
@@ -761,7 +761,7 @@
     "xpack.lens.xyChart.axisExtent.disabledDataBoundsMessage": "仅折线图可适应数据边界",
     "xpack.lens.xyChart.axisExtent.full": "实线",
     "xpack.lens.xyChart.axisExtent.label": "边界",
-    "xpack.lens.xyChart.axisNameLabel": "轴名称",
+    "xpack.lens.shared.axisNameLabel": "轴名称",
     "xpack.lens.xyChart.axisOrientation.angled": "带角度",
     "xpack.lens.xyChart.axisOrientation.horizontal": "水平",
     "xpack.lens.xyChart.axisOrientation.label": "方向",
@@ -817,7 +817,7 @@
     "xpack.lens.xyChart.missingValuesLabel": "缺少的值",
     "xpack.lens.xyChart.missingValuesLabelHelpText": "默认情况下，Lens 隐藏数据中的缺口。要填充缺口，请进行选择。",
     "xpack.lens.xyChart.nestUnderRoot": "整个数据集",
-    "xpack.lens.xyChart.overwriteAxisTitle": "覆盖轴标题",
+    "xpack.lens.shared.overwriteAxisTitle": "覆盖轴标题",
     "xpack.lens.xyChart.position.help": "指定图例位置。",
     "xpack.lens.xyChart.referenceLine.alertIconLabel": "告警",
     "xpack.lens.xyChart.referenceLine.asteriskIconLabel": "星号",
@@ -849,7 +849,7 @@
     "xpack.lens.xyChart.seriesColor.auto": "自动",
     "xpack.lens.xyChart.seriesColor.label": "系列颜色",
     "xpack.lens.xyChart.shouldTruncate.help": "指定是否将截断图例项",
-    "xpack.lens.xyChart.ShowAxisTitleLabel": "显示",
+    "xpack.lens.shared.ShowAxisTitleLabel": "显示",
     "xpack.lens.xyChart.showEnzones": "显示部分数据标记",
     "xpack.lens.xyChart.showSingleSeries.help": "指定是否应显示只包含一个条目的图例",
     "xpack.lens.xyChart.splitSeries": "细分方式",
