--- a/docs/management/connectors/action-types/xmatters.asciidoc
+++ b/docs/management/connectors/action-types/xmatters.asciidoc
@@ -13,12 +13,12 @@ The xMatters connector uses https://github.com/axios/axios[axios] to send a POST
 
 xMatters connectors have the following configuration properties.
 
-Name::      The name of the connector. The name is used to identify a connector in the management UI connector listing, or in the connector list when configuring an action.
-URL::                 The request URL. If you are using the <<action-settings, `xpack.actions.allowedHosts`>> setting, make sure the hostname is added to the allowed hosts.
-Headers::                                                                                                         A set of key-value pairs sent as headers with the request.
-Require authentication::                                                                    If true, a username and password for login type authentication must be provided.
-Username::                                                                                                                           Username for HTTP basic authentication.
-Password::                                                                                                                           Password for HTTP basic authentication.
+Name::                                 The name of the connector. The name is used to identify a connector in the management UI connector listing, or in the connector list when configuring an action.
+URL:: The request URL for the Elastic Alerts trigger in xMatters. If you are using the <<action-settings, `xpack.actions.allowedHosts`>> setting, make sure the hostname is added to the allowed hosts.
+Headers::                                                                                                                                    A set of key-value pairs sent as headers with the request.
+Require authentication::                                                                                               If true, a username and password for login type authentication must be provided.
+Username::                                                                                                                                                      Username for HTTP Basic Authentication.
+Password::                                                                                                                                                      Password for HTTP Basic Authentication.
 
 [float]
 [[xmatters-connector-networking-configuration]]
@@ -64,7 +64,7 @@ Define xMatters connector properties.
 [role="screenshot"]
 image::management/connectors/images/xmatters-connector.png[xMatters connector]
 
-Test xMatters action parameters.
+Test xMatters rule parameters.
 
 [role="screenshot"]
 image::management/connectors/images/xmatters-params-test.png[xMatters params test]
@@ -73,23 +73,20 @@ image::management/connectors/images/xmatters-params-test.png[xMatters params tes
 [[xmatters-action-configuration]]
 ==== Action configuration
 
-xMatters actions have the following properties.
+xMatters rules have the following properties.
 
-alertActionGroupName: Name of the alert action group that scheduled actions for the alert.
-alertId:                                                         	 Unique ID of the alert.
-alertName:                                                              Name of the alert.
-date:                                                 Date the alert scheduled the action.
-severity:                                                           Severity of the alert.
-spaceId:                                          Unique ID of the alert space in Elastic.
-tags:                   Comma-separated list of tags for the alert as provided by Elastic.
+ruleName:                                                 Name of the Elastic rule. 
+date:                                           Date the rule scheduled the action.
+severity:                                                     Severity of the rule.
+spaceId:                                    Unique ID of the rule space in Elastic.
+tags: Comma-separated list of tags for the rule as provided by the user in Elastic.
 
 Here is an example set of inputs:
 --
 {
-  "alertActionGroupName": "{{alertActionGroupName}}",
-  "alertId": "{{alertId}}",
-  "alertName": "{{alertName}}",
+  "ruleName": "{{ruleName}}",
   "date": "{{date}}",
+  "severity": "High",
   ...
 }
 --
