[DOCS] Copy edit

--- a/docs/user/whats-new.asciidoc
+++ b/docs/user/whats-new.asciidoc
@@ -15,13 +15,13 @@ coming[8.0.0]
 [float]
 === Security on-by-default
 
-Authentication, authorization and multi-tenancy
-with {kib} Spaces are on-by-default, with next-to-zero configuration effort.
-When you run {kib} for the first time, you will be presented with a new interactive
+Authentication, authorization, and multi-tenancy
+with {kib} Spaces are on-by-default, with almost no configuration effort.
+When you run {kib} for the first time, you'll be presented with a new interactive
 UI that will help you set up {kib} and connect it securely to {es}.
-Simply paste the enrollment token that you receive when you ran
+Simply paste the enrollment token that you received when you ran
 {es}, and {kib} will set up all the previous security features
-for you and will connect {es} over TLS.
+and connect {es} over TLS.
 
 [role="screenshot"]
 image::images/highlights-security.png[Configure Elastic to get started]
@@ -29,26 +29,23 @@ image::images/highlights-security.png[Configure Elastic to get started]
 
 [float]
 === Index patterns are now data views
-By renaming index patterns to data views, we’re laying a foundation for building
-many exciting features over the next year and beyond. Your data views will work
+Renaming index patterns to data views creates the foundation for building
+new and exciting features in {kib}. Your data views will work
 exactly as index patterns did in previous releases.
 
 [float]
-=== Vector tile support now GA
+=== Maps updates vector tiles & basemaps
 
-Vector tile drawing of {es} data is generally available in *Maps* .
+Elastic is offering full vector tile support, generally available, in {kib} *Maps*.
+Enjoy faster performance and buttery smooth navigation of your data at scale.
 Enjoy faster performance and smooth navigation of your data at scale.
-Read more about this feature.
 
 [role="screenshot"]
 image::images/highlights-maps.png[Three vector tile examples in Maps]
 
-[float]
-=== Desaturated basemaps are the default
-
 The default basemaps in light and dark themes now use
 the more understated desaturated basemap. This gives your data the most
-visual attention in *Maps*.
+visual attention.
 
 [float]
 === Discover has field statistics (beta)
@@ -57,7 +54,7 @@ Enable the new {kibana-ref}/show-field-statistics.html[*Field statistics*] view
 for a summary of all fields (or just selected fields) in your data.
 You'll find interesting fields to visualize and learn more about the shape of your data.
 The *Field statistics* view
-is similar to the Index Data Visualizerin {ml-app}.
+is similar to the Index Data Visualizer in {ml-app}.
 
 [role="screenshot"]
 image::images/highlights-discover.gif[Fields statistics view in Discover]
@@ -67,13 +64,13 @@ image::images/highlights-discover.gif[Fields statistics view in Discover]
 The time axis was upgraded across {kib} to solve key readability and
 formatting issues. This redesign affects *Lens*, *TSVB*,
 aggregation-based visualizations, and *Discover*.
-This multi-layered format enables you to creating easier to understand visualizations from your data
+This multi-layered format enables you to create easier to understand visualizations from your data
 
 [role="screenshot"]
 image::images/highlights-time-axis.gif[Upgraded time axis]
 
 [float]
-=== Lens heatmaps supports values mode
+=== Lens heatmaps support values mode
 
 Enable *Show* on labels in the editor toolbar and,
 when there’s room, a responsive data label will appear in each heatmap cell.
@@ -83,7 +80,7 @@ image::images/highlights-lens.png[Show pop-up on heatmap cell]
 
 [float]
 === Canvas editing toolbar renovated
-This redesign brings a set of edit controls in *Canvas*,
+This new design brings a set of editing controls in *Canvas*,
 similar to what you see in *Dashboard*.
 Use this toolbar to quickly access the *Visualization Library* and
 create elements and visualizations.
@@ -91,13 +88,13 @@ create elements and visualizations.
 [role="screenshot"]
 image::images/highlights-canvas.png[Editing toolbar in Canvas]
 
-Canvas also now has these two features similar to *Dashboard*.
+Canvas also has these features similar to *Dashboard*.
 
-* You can now create embedded visualizations in your *Canvas* workpads. Just like in *Dashboard*,
-promote favorites to the *Visualization Library* for re-use.
+* You can create embedded visualizations in your *Canvas* workpads.
+Promote favorites to the *Visualization Library* for re-use.
 
-* Editing a visualization from *Canvas* will return you to *Canvas*s when you
-click *Save and close* &mdash; just like in *Dashboard*. Fewer clicks to author
+* Editing a visualization from *Canvas* will return you to *Canvas* when you
+click *Save and close*. Fewer clicks to author
 and edit existing presentations.
 
 
