--- a/docs/user/whats-new.asciidoc
+++ b/docs/user/whats-new.asciidoc
@@ -18,7 +18,7 @@ coming[8.0.0]
 Authentication, authorization, and multi-tenancy
 with {kib} Spaces are enabled by default, with almost no configuration effort.
 When you run {kib} for the first time, you'll be presented with a new interactive
-UI that will help you set up {kib} and connect it securely to {es}.
+UI that will help you set up {kib} and connect it to a secured {es} cluster.
 Simply paste the enrollment token that you received when you ran
 {es}, and {kib} will set up all {stack} security features
 and connect {es} over TLS.
