--- a/docs/maps/import-geospatial-data.asciidoc
+++ b/docs/maps/import-geospatial-data.asciidoc
@@ -79,7 +79,7 @@ To open an existing index for drawing:
 
 . Select *Documents*.
 
-. Select the data view that points to your index. A <<data-views, data view>> can point to one or more indices. For feature editing, the data view must point to a single index.
+. Select the index pattern that points to your index. A <<index-patterns, index pattern>> can point to one or more indices. For feature editing, the data view must point to a single index.
 
 . Click *Add layer*.
 
