add story and mdx

--- a/src/plugins/shared_ux/public/components/toolbar_button/toolbar_button.mdx
+++ b/src/plugins/shared_ux/public/components/toolbar_button/toolbar_button.mdx
@@ -4,7 +4,9 @@ slug: /shared-ux/components/toolbar-button
 title: ToolbarButton
 summary: 
 tags: ['shared-ux', 'component']
-date: 2021-02-o1
+date: 2021-02-02
 ---
 
 > This documentation is in-progress.
+
+The pure component contains a button with a downward arrow by default. 
