--- a/dev_docs/tutorials/ci.mdx
+++ b/dev_docs/tutorials/ci.mdx
@@ -9,7 +9,7 @@ tags: ['kibana', 'onboarding', 'dev', 'ci']
 
 ## CI
 
-Kibana uses BuildKite to run a series of checks against each pull requests and tracked branch.  Results are posted in pull requests as comments or from the BuildKite UI
+Kibana uses BuildKite to run a series of checks against each pull requests and tracked branch.  Results are posted in pull requests as comments and from the BuildKite UI
 
 ### CI Labels
 
@@ -21,11 +21,11 @@ Deploy a pull request to Elastic Cloud.  Deployment information will be availabl
 
 #### `ci:build-all-platforms`
 
-Build Windows, macOS, and Linux archives.  Artifacts will be available on the on the "Artifacts" tab of the "Build Kibana Distribution and Plugins" step.
+Build Windows, macOS, and Linux archives.  Artifacts will be available on the "Artifacts" tab of the "Build Kibana Distribution and Plugins" step.
 
 #### `ci:build-os-packages`
 
-Build Docker images, and Debian and RPM packages.  Artifacts will be available on the on the "Artifacts" tab of the "Build Kibana Distribution and Plugins" step.
+Build Docker images, and Debian and RPM packages.  Artifacts will be available on the "Artifacts" tab of the "Build Kibana Distribution and Plugins" step.
 
 #### `ci:all-cypress-suites`
 
