--- a/dev_docs/tutorials/ci.mdx
+++ b/dev_docs/tutorials/ci.mdx
@@ -11,9 +11,25 @@ tags: ['kibana', 'onboarding', 'dev', 'ci']
 
 Kibana uses BuildKite to run a series of checks against each pull requests and tracked branch.  Results are posted in pull requests as comments and from the BuildKite UI
 
-### CI Labels
+### Comments
 
-Labels can be added to a pull request to perform additional operations.
+Comments in pull requests can be used to trigger CI operations.
+
+#### `buildkite test this`
+
+Run test suites and checks.
+
+#### `@elasticmachine merge upstream`
+
+Merge in the most recent changes from upstream.
+
+#### `@elasticmachine run elasticsearch-ci/docs`
+
+Build documentation from the root `docs` folder.
+
+### Labels
+
+Labels can be added to a pull request to run conditional pipelines.
 
 #### `ci:deploy-cloud`
 
@@ -30,4 +46,3 @@ Build Docker images, and Debian and RPM packages.  Artifacts will be available o
 #### `ci:all-cypress-suites`
 
 By default, Cypress test suites are only run when code changes are made in certain files, typically files with overlapping test coverage.  Adding this label will cause all Cypress tests to run.
-
