Apply suggestions from code review
Co-authored-by: Kaarina Tungseth <kaarina.tungseth@elastic.co>

--- a/docs/setup/upgrade.asciidoc
+++ b/docs/setup/upgrade.asciidoc
@@ -2,31 +2,31 @@
 == Upgrade {kib}
 
 To upgrade from 7.16 or earlier to {version}, 
-**you must first upgrade to {prev-major-last}**.
+**You must first upgrade to {prev-major-last}**.
 This enables you to use the Upgrade Assistant to
 {stack-ref}/upgrading-stack.html#prepare-to-upgrade[prepare to upgrade].
 You must resolve all critical issues identified by the Upgrade Assistant
 before proceeding with the upgrade. 
 
 {kib} does not support rolling upgrades. 
-You must shut down all Kibana instances, install the new software, and restart Kibana.
+You must shut down all {kib} instances, install the new software, and restart {kib}.
 Upgrading while older {kib} instances are running can cause data loss or upgrade failures.
 
 [WARNING]
 ====
 {kib} automatically runs <<saved-object-migrations, saved object migrations>> 
 when required. 
-To roll back to an
-earlier version in case of an upgrade failure, you **must** have a
+In case of an upgrade failure, you can roll back to an
+earlier version of {kib}. To roll back, you **must** have a
 {ref}/snapshot-restore.html[backup snapshot] that includes the `kibana` feature
 state. Snapshots include this feature state by default.
 ====
 
 For more information about upgrading, 
-see {stack-ref}/upgrading-stack.html[Upgrading to Elastic {version}.]
+refer to {stack-ref}/upgrading-stack.html[Upgrading to Elastic {version}.]
 
 IMPORTANT: You can upgrade to pre-release versions for testing, 
-but upgrading from a pre-release to the final GA version is not supported.
+but upgrading from a pre-release to the General Available version is not supported.
 Pre-releases should only be used for testing in a temporary environment.
 
 include::upgrade/upgrade-migrations.asciidoc[leveloffset=-1]
