--- a/docs/management/upgrade-assistant/index.asciidoc
+++ b/docs/management/upgrade-assistant/index.asciidoc
@@ -17,7 +17,7 @@ IMPORTANT: To see the most up-to-date deprecation information before
 upgrading to 8.0, upgrade to the latest {prev-major-last} release.
 
 For more information about upgrading, 
-see {stack-ref}/upgrading-stack.html[Upgrading to Elastic {version}.]
+refer to {stack-ref}/upgrading-stack.html[Upgrading to Elastic {version}.]
 
 [discrete]
 === Required permissions
