[DOCS] Removes Upgrade Assistant doc (#124894)
* [DOCS] Removes Upgrade Assistant doc from 8.x

* [DOCS] Removes Upgrade Assistant from Stack Management page

* Update docs/redirects.asciidoc

Co-authored-by: James Rodewig <james.rodewig@elastic.co>

Co-authored-by: James Rodewig <james.rodewig@elastic.co>
(cherry picked from commit 729b49d113bcbe22c84498e0d093341864ee86e8)

--- a/docs/redirects.asciidoc
+++ b/docs/redirects.asciidoc
@@ -395,3 +395,8 @@ This content has moved. Refer to <<logging-config-changes>>.
 == Upgrade migrations
 
 This content has moved. Refer to <<saved-object-migrations>>.
+
+[role="exclude",id="upgrade-assistant"]
+== Upgrade Assistant
+
+This content has moved. Refer to {kibana-ref-all}/7.17/upgrade-assistant.html[Upgrade Assistant].
