[8.0][DOCS] Adds machine learning-related items to What's new section.

--- a/docs/user/whats-new.asciidoc
+++ b/docs/user/whats-new.asciidoc
@@ -92,5 +92,17 @@ You can also now
 create embedded visualizations in your *Canvas* workpads.
 Just like in *Dashboard*, you can promote favorites to the *Visualization Library* for re-use.
 
+[float]
+=== {ml-cap} model management
+
+You can now add more models to bring modern 
+{ml-docs}/ml-nlp.html[{nlp} (NLP)] use cases to the {stack}. NLP models exist 
+alongside {dfanalytics} models. The **Model Management** page shows 
+approximations for memory usage on each {ml} node and displays high level stats 
+for {infer} rates for each deployed trained model. These details enable you to 
+make node sizing decisions for {ml} nodes.
+
+[role="screenshot"]
+image::images/model-management.png[Model management in Machine Learning]
 
 // end::notable-highlights[]
